GP stat! (c) David Fong, 2019

front-end to DailyMeasure package

Version 1.3.7, 5th November 2019
==================================

Features

* define host and port number in GPstat()
* multiple sessions can be opened. app does not stop until all sessions are closed
* demontration mode option in GPstat()

Bugfix

* remove 'Download' option/button from HTML view of Billings module


Version 1.3.6, 28th September 2019
==================================

Improvement/bugfix

* Added 'Invoiced' to contact_appointments types (reflects changes in dMeasure)

Version 1.3.5, 27th September 2019
==================================

Improvement

* round framingham risk equation results to 3 decimal places

Bug fixes

* COPD patients in QIM COPD appointments, instead of diabetic patients

Version 1.3.4, 23rd September 2019
==================================

Bug fixes

* Fix crash if trying to access logs when no logs database is open
* Fix attempts to download 'graphical' (fomantic/semantic) tables
* Prevent opening of Chronic Disease Management (CDM) tab if Billings module not available

Version 1.3.3, 21st September 2019
==================================

Modularization

* dMeasureQIM (quality improvement measures), dMeasureBillings (Billigns) and
  dMeasureCDM (chronic disease management) are now an optional modules/packages.
  changes to UI and server to allow dynamic creation of tabItems and sidebarMenu


Version 1.3.2, 18th September 2019
==================================

Improvements

* Quality Improvement Measures appointments view
  Uses separate package version of dMeasureQIM

* datatable_styled accepts arguments which allow
  selectable button extensions

* Remove DiabetesSIP and AsthmaSIP from default CDM list

  These items are no longer available for billing

Bug-fix

* Move demographic_group and ignoreOld in QIM Measures
  to 'common' titlebar area

  Having separate demographic_group buttons could cause
  a race-condition


